refactor: 정적 팩토리 메소드에서 int를 받지 않고 List<Lotto>를 받도록 구현